<resources>
    <string name="app_name">SeriesHub</string>
    <!-- Login -->
    <string name="tv_title_login">Please enter your credentials to access your account.</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_reset">Clean</string>
    <string name="tv_or_login">or login with</string>
    <!-- Menu Navigation -->
    <string name="item_explorer">Explorer</string>
    <string name="item_profile">Profile</string>
    <string name="item_search">Search</string>
    <string name="item_reviews">Reviews</string>
    <string name="item_exit">Exit</string>
    <string name="item_maps">Maps</string>
    <string name="item_game">Spin &amp; Watch</string>
    <string name="item_group_chat">Group Chat</string>
    <!-- Profile -->
    <string name="btn_logout">Logout</string>
    <string name="tv_title_profile">Your Profile</string>
    <!-- Explorer -->
    <string name="tv_title_explore">Explore Series</string>
    <string name="btn_top">Top Rated</string>
    <string name="btn_airing">Airing Today</string>
    <string name="btn_popular">Popular</string>
    <string name="checkBox">+18</string>
    <!-- Detail -->
    <string name="btn_back">Back</string>
    <string name="btn_create">Add Review</string>
    <!-- Review -->
    <string name="tv_title_review">Your Personal Reviews</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <!-- Add Review -->
    <string name="tv_title_add">Add Review</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="et_comment">Comment</string>
    <string name="tv_rating">Your Rating</string>
    <!-- Update Review -->
    <string name="tv_title_update">Update Review</string>
    <string name="btn_update">Update</string>
    <!-- Spin & Watch -->
    <string name="tv_title_spin">Spin &amp; Watch </string>
    <string name="tv_description_spin">Shake your phone to shuffle through random series and discover your next binge-worthy favorite. Let the fun decide what to watch next!"</string>
</resources>